Fixes layout on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,6 @@ app-root {
 .main {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   flex: 1;
 }
 
